@@ -1,8 +1,8 @@
 --TEST--
-SPL: Problem with casting to string
+SPL: Problem with casting to string (no glob version)
 --SKIPIF--
 <?php
-if (!defined('GLOB_ERR')) print "skip";
+if (defined('GLOB_ERR')) print "skip";
 --FILE--
 <?php
 $d = new DirectoryIterator('.');
@@ -13,16 +13,15 @@ var_dump(is_string($d));
 ?>
 ===DONE===
 --EXPECTF--
-object(DirectoryIterator)#%d (4) {
+object(DirectoryIterator)#%d (3) {
   %s"pathName"%s"SplFileInfo":private]=>
   %s(%d) ".%c%s"
   %s"fileName"%s"SplFileInfo":private]=>
   %s(%d) "%s"
-  %s"glob"%s"DirectoryIterator":private]=>
-  bool(false)
   %s"subPathName"%s"RecursiveDirectoryIterator":private]=>
   %s(0) ""
 }
 bool(false)
 bool(false)
 ===DONE===
+
