@@ -130,6 +130,7 @@
     (Mateusz Kocielski, Pierre)
 
 - SPL extension:
+  . Fixed bug #53914 (SPL assumes HAVE_GLOB is defined). (Chris Jones)
   . Fixed bug #53515 (property_exists incorrect on ArrayObject null and 0
     values). (Felipe)
     
